# ducktail

./: .gitignore  CLAUDE.md  README.md  docker-compose.yaml  justfile  mkdocs.yml  pyproject.toml
.flox/: env.json
.flox/env/: manifest.toml
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  docs.yml  pip-audit.yml  release.yml  scorecard.yml  zizmor.yml
demo/: producer.py
demo/data/main/events/: ducklake-019d5ffc-5b71-7c6c-8cd7-183944ab71fb.parquet  ducklake-019d5ffc-a211-7206-8434-302ecd7e249b.parquet  ducklake-019d5ffd-75f0-7a34-861f-96ecbaffe497.parquet  ducklake-019d5ffd-bc9e-70df-94f7-c18b0f1e19e0.parquet  ducklake-019d5ffe-26a2-7a65-adc9-d7a7cbca1055.parquet  ducklake-019d5ffe-4a15-792b-8e76-8aedd18afe0d.parquet  ducklake-019d5ffe-6d8b-7205-8408-3b5be6dac531.parquet  ducklake-019d5fff-41a3-741b-a1b1-436d088ffc4f.parquet
docs/: demo.md  getting-started.md  interactive.md  usage.md
examples/: interactive_demo.py  quickstart.py
src/ducktail/: __init__.py  cli.py  config.py  formatter.py  interactive.py  tailer.py
tests/: test_cli.py  test_config.py  test_formatter.py  test_tailer.py
tests/integration/: test_tail_integration.py
