[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ducktail"
version = "0.1.0"
description = "Tail DuckLake tables via CDC"
requires-python = ">=3.12"
dependencies = [
    "click>=8.0,<9",
    "duckdb>=1.4,<2",
    "pyarrow>=18.0,<24",
    "pyducklake>=1.0",
    "rich>=13.0,<14",
    "pytz>=2024.1",
]

[project.scripts]
ducktail = "ducktail.cli:cli"

[tool.hatch.build]
exclude = [".flox"]

[tool.hatch.build.targets.wheel]
packages = ["src/ducktail"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "mypy>=1.10",
    "pyright>=1.1",
    "ruff>=0.8",
    "testcontainers>=4.14.2",
    "pyarrow-stubs>=18.0",
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks tests as integration tests (requires Docker)",
]
