[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ducktail"
version = "1.0.2"
readme = "README.md"
description = "Tail DuckLake tables via CDC"
license = "Apache-2.0"
authors = [
    { name = "Jakob Homan" },
]
keywords = ["ducklake", "cdc", "duckdb", "tail", "streaming", "change-data-capture"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Typing :: Typed",
]
requires-python = ">=3.12"
dependencies = [
    "click>=8.0,<9",
    "duckdb>=1.4,<2",
    "pyarrow>=18.0,<25",
    "pyducklake>=1.0",
    "rich>=13.0,<16",
    "pytz>=2024.1",
]

[project.scripts]
ducktail = "ducktail.cli:cli"

[project.urls]
Homepage = "https://github.com/jghoman/ducktail"
Repository = "https://github.com/jghoman/ducktail"
Issues = "https://github.com/jghoman/ducktail/issues"
Documentation = "https://jghoman.github.io/ducktail/"
Changelog = "https://github.com/jghoman/ducktail/releases"

[tool.hatch.build]
exclude = [".flox"]

[tool.hatch.build.targets.wheel]
packages = ["src/ducktail"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "mypy>=1.10",
    "pyright>=1.1",
    "ruff>=0.8",
    "testcontainers>=4.14.2",
    "pyarrow-stubs>=18.0",
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks tests as integration tests (requires Docker)",
]
